# giraffeCAD-proto

./: .cursorrules  .gitignore  AGENT_INSTRUCTIONS.md  DEVELOPERS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO.txt  TYPECHECK_SETUP.md  conftest.py  debug_orientation.py  example.py  example_authoring_notes.md  fix_dev.py  footprint.py  giraffe.py  giraffe_render_fusion360.py  mathymath.py  meowmeowcsg.py  moothymoth.py  morenotes.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sawhorse_example.py  setup_dev.sh  supersimple_example.py  supersimple_example2.py  supersimple_example4.py  supersimple_example5.py  test_float_conversion.py  test_matrix_debug.py  test_step_output.py
.github/: copilot-instructions.md
code_goes_here/: __init__.py  basic_joints.py  blueprint.py  blueprint_cadquery.py  conftest.py  construction.py  cutcsg.py  example_shavings.py  footprint.py  helperonis.py  japanese_joints.py  joint_helperonis.py  joint_shavings.py  librarian.py  measuring.py  meowmeowcsg.py  moothymoth.py  mortise_and_tenon_joint.py  patternbook.py  plain_joints.py  rendering_utils.py  rule.py  test_basic_joints.py  test_construction.py  test_footprint.py  test_joint_helperonis.py  test_joint_shavings.py  test_measuring.py  test_meowmeowcsg.py  test_moothymoth.py  test_mortise_and_tenon_joint.py  test_patternbook.py  test_rendering_utils.py  test_rule.py  test_shoulder_distance.py  test_timber.py  test_timber_shavings.py  testing_shavings.py  ticket.py  timber.py  (+2 more)
docs/: concepts.md  index.md
examples/: CutCSG_examples.py  MeowMeowCSG_examples.py  basic_joints_examples.py  construction_examples.py  horsey_example.py  irrational_angles_example.py  japanese_joints_example.py  mortise_and_tenon_joint_examples.py  new_shed.py  oscarshed.py  patternbook_example.py  plain_joints_example.py  sawhorse_example.py  supersimple_example.py  supersimple_example2.py  supersimple_example3.py  supersimple_example4.py  supersimple_example5.py  test_MeowMeowCSG_examples.py
freecad/: .gitignore  README.md  giraffe_render_freecad.py  render_example.py  run_basic_joints.py  run_examples.py  run_mortise_and_tenon.py  test_basic_joints.py  test_csg.py  test_mortise_and_tenon.py  test_oscar_shed.py
fusion360/: README.md  giraffe_render_fusion360.py  giraffe_render_fusion360_OLD.py  giraffetest.manifest  giraffetest.py  test_local.py
giraffecad/: __init__.py  blueprint.py  blueprint_cadquery.py  construction.py  cutcsg.py  example_shavings.py  measuring.py  patternbook.py  rule.py  ticket.py  timber.py  timber_shavings.py  triangles.py
giraffetest/: README.md  giraffetest.py  (+1 more)
(+154 files in other folders)
