[project]
name = "giraffeCAD"
version = "0.1.0"
description = "A library for programmatic timber frame CAD design"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "minimaple" }]
readme = "README.md"
dependencies = [
    "manifold3d",
    "sympy",
    "trimesh",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_goes_here"]

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "ty>=0.0.15",
    "pytest",
]

[tool.ty.src]
exclude = ["oldcrap", "fusion360/libs", "horsey-viewer", "fusion360", "freecad", "patterns"]